--- a/docs/_sass/custom/staffer.scss
+++ b/docs/_sass/custom/staffer.scss
@@ -2,6 +2,7 @@
   display: inline-flex;
   margin: 20px;
   width: 324px;
+  height: 120px;
   border-radius: 20px;
   box-shadow: 2px 2px 10px 2px  rgba(0, 0, 0, 0.151);
 
